syntax = "proto3";

package rivet.backend.pkg.module.msg.create;

import "proto/common.proto";

/// name = "msg-module-create"
/// parameters = [
/// 	{ name = "module_id" },
/// ]
message Message {
	rivet.common.Uuid module_id = 1;
	string name_id = 2;
	rivet.common.Uuid team_id = 3;
	optional rivet.common.Uuid creator_user_id = 4;
}

